--- a/FFMpeg_video_converter/FFMpeg_video_converter.csproj
+++ b/FFMpeg_video_converter/FFMpeg_video_converter.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Xabe.FFmpeg" Version="5.2.0" />
+    <PackageReference Include="Xabe.FFmpeg.Downloader" Version="5.2.0" />
   </ItemGroup>
 
   <ItemGroup>
